tests/negative/gold/super3_test.gold
tests/negative/super3_test.toit:5:16: error: Super constructor calls must be at the top-level
    unresolved super
               ^~~~~
tests/negative/super3_test.toit:5:5: error: Unresolved identifier: 'unresolved'
    unresolved super
    ^~~~~~~~~~
Compilation failed.
